# NL2BP-Natural-Language-to-UML-Blueprints

./: 01-general-guide.md  02-formatting-examples.md  LICENSE  README.md
workflow_multi_agent/: README.md  README_EN.md
workflow_multi_agent/crewai_code/: README.md  README_EN.md  pyproject.toml
workflow_multi_agent/crewai_code/agileworkflow/: agile_flow.py  main.py
workflow_multi_agent/crewai_code/agileworkflow/crews/agile_crew/: __init__.py  agile_crew.py
workflow_multi_agent/crewai_code/agileworkflow/crews/agile_crew/config/: agents.yaml  tasks.yaml
workflow_multi_agent/crewai_code/agileworkflow/crews/agile_crew/prompts/: agile_dashboard_agent_prompt.txt  backend_design_agent_prompt.txt  blueprint_design_agent_prompt.txt  developer_agent_prompt.txt  feedback_planning_agent_prompt.txt  frontend_design_agent_prompt.txt  requirement_analysis_agent_prompt.txt  system_design_agent_prompt.txt  testing_agent_prompt.txt  version_control_agent_prompt.txt
workflow_multi_agent/crewai_code/agileworkflow/tools/: file_writer_tool.py
workflow_single_agent/: README.md  README_EN.md
workflow_single_agent/agent_profile/: BlueprintWriter_Profile.md
workflow_single_agent/role_prompts/rules-01-req-gen/: 01-general-guide.md
workflow_single_agent/role_prompts/rules-blueprintdesign/: 01-general-guide.md
workflow_single_agent/rules-code-reviewer/: 01-general-guide.md
workflow_single_agent/rules-coder/: 01-general-guide.md
workflow_single_agent/rules-systemdesign/: 01-general-guide.md
workflow_single_agent/workflow_pic/: workflow_EN.md  workflow_ZH.md
(+1 files in other folders)
