[project]
name = "agileworkflow"
version = "0.1.0"
description = "AgileWorkflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
]

[project.scripts]
kickoff = "agileworkflow.main:kickoff"
run_crew = "agileworkflow.main:kickoff"
plot = "agileworkflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
